--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,9 @@ bind s list-sessions
 # reload config
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
 
+# toggle status bar visibility
+bind b run-shell "tmux setw -g status \$(tmux show -g -w status | grep -q off && echo on || echo off)"
+
 # better splitting
 bind v split-window -h -c "#{pane_current_path}"
 bind V split-window -v -c "#{pane_current_path}"
@@ -23,18 +26,8 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-# less colourful status
-# set -g status-bg colour240
-# set -g status-fg white
-
-# 256 colors support
-# set -g default-terminal "screen-256color"
-#set-option -sa terminal-overrides ',screen-256color:RGB'
-
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*256col*:Tc"
-
-# sane scrolling
 set -g mouse on
 
 # Set window notifications
@@ -44,9 +37,6 @@ set -g visual-activity on
 # vi mode
 setw -g mode-keys vi
 
-# pane name 
-# not working why?
-#
 # set -g window-status-format "#I: #W [#{pane_current_path}]"
 # set -g window-status-current-format "#I: #W [#{pane_current_path}]"
 # set-window-option -g window-status-style fg=colour244
@@ -64,28 +54,46 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'arl/gitmux'
 
-# Configure gruvbox
-# set -g @plugin 'egel/tmux-gruvbox'
-# set -g @tmux-gruvbox 'light' # or 'dark256', 'light', 'light256'
+# Configure theme
+# set -g @themepack 'dracula/tmux'
+# set -g @themepack 'nordtheme/tmux'
+# set -g @dracula-show-powerline true
+# set -g @dracula-fixed-location "Batumi"
+# set -g @dracula-plugins "weather"
+# set -g @dracula-show-flags true
+# set -g @dracula-show-left-icon "session"
+set -g status-position top
+
+# set -g @plugin "nordtheme/tmux"
+set -g @plugin 'egel/tmux-gruvbox'
+# set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
+set -g @tmux-gruvbox 'light' # or 'dark257', 'light', 'light256'
 # set -g @plugin 'stepanzak/tmux-statusline-gruvbox'
+# set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 
 
-# Configure the catppuccin plugin
-set -g @plugin 'catppuccin/tmux#v2.1.2'
-set -g @catppuccin_flavor "frappe"
-set -g @catppuccin_window_status_style "rounded"
-set-option -g status-position top
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -g @catppuccin_window_default_text " #W"
-set -g @catppuccin_window_current_text " #W"
-set -g @catppuccin_window_text " #W"
+# Start configure the catppuccin plugin
+# set -g @plugin 'catppuccin/tmux#v2.1.3'
+# set -g @catppuccin_flavor "frappe"
+
+# set -g status-left-length 100
+# set -g status-right-length 100
+# set -g status-right-style "none"
+# set -g status-right "#{E:@catppuccin_status_application}"
+# set -ag status-right "#[bg=#{@thm_teal},fg=#{@thm_crust}]#[reverse]#[noreverse] 󱀙  "
+# set -ag status-right "#[fg=#{@thm_fg},bg=#{@thm_bg}] #(memory_pressure | awk '/percentage/{print $5}') "
+# set -ag status-right "#[bg=#{@thm_teal},fg=#{@thm_crust}]#[reverse]#[noreverse]   "
+# set -ag status-right "#[fg=#{@thm_fg},bg=#{@thm_bg}] #{cpu_percentage} "
+#
+# set -g @catppuccin_window_default_text " #W"
+# set -g @catppuccin_window_current_text " #W"
+# set -g @catppuccin_window_text " #W"
+#
+# set -g @catppuccin_window_status_style "basic"
+# End catppuccin setup
 
 # TMUX plugin manager (keep at the bottom of tmux.conf)
 run -b '~/.config/tmux/plugins/tpm/tpm'
