--- a/tmux.conf
+++ b/tmux.conf
@@ -6,8 +6,6 @@ set-option -g xterm-keys on
 set -g prefix C-a
 bind C-a send-prefix
 
-# set -g status on
-
 # sessions
 bind s list-sessions
 
@@ -17,11 +15,32 @@ bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded.
 # toggle status bar visibility
 bind b run-shell "tmux setw -g status \$(tmux show -g -w status | grep -q off && echo on || echo off)"
 
+# list of plugins
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
+set-environment -g TPM_LOG_PATH "/tmp/tpm.log"
+set-environment -g TPM_LOG_LEVEL "debug"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'arl/gitmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# jump-key plugin
+set -g @plugin 'schasse/tmux-jump'
+set -g @jump-key 's'
+
+set -g @plugin 'alexwforsythe/tmux-which-key'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+
+
 # better splitting
 bind v split-window -h -c "#{pane_current_path}"
 bind V split-window -v -c "#{pane_current_path}"
 
 bind-key h select-pane -L
+unbind-key j
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
@@ -37,66 +56,64 @@ set -g visual-activity on
 # vi mode
 setw -g mode-keys vi
 
-# set -g window-status-format "#I: #W [#{pane_current_path}]"
-# set -g window-status-current-format "#I: #W [#{pane_current_path}]"
-# set-window-option -g window-status-style fg=colour244
-# set-window-option -g window-status-style bg=default
-# set-window-option -g window-status-current-style fg=colour166
-# set-window-option -g window-status-current-style bg=default
-# set-window-option -g window-status-format "#I: #W [#{pane_current_path}]"
-
-
-# list of plugins
-set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
-set-environment -g TPM_LOG_PATH "/tmp/tpm.log"
-set-environment -g TPM_LOG_LEVEL "debug"
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-urlview'
-set -g @plugin 'arl/gitmux'
 
 # Configure theme
-# set -g @themepack 'dracula/tmux'
-# set -g @themepack 'nordtheme/tmux'
-# set -g @dracula-show-powerline true
-# set -g @dracula-fixed-location "Batumi"
-# set -g @dracula-plugins "weather"
-# set -g @dracula-show-flags true
-# set -g @dracula-show-left-icon "session"
 set -g status-position top
 
-# set -g @plugin "nordtheme/tmux"
-set -g @plugin 'egel/tmux-gruvbox'
-# set -g @tmux-gruvbox 'dark' # or 'dark256', 'light', 'light256'
-set -g @tmux-gruvbox 'light' # or 'dark257', 'light', 'light256'
-# set -g @plugin 'stepanzak/tmux-statusline-gruvbox'
-# set -g @plugin 'MunifTanjim/tmux-mode-indicator'
-
-
 # Start configure the catppuccin plugin
-# set -g @plugin 'catppuccin/tmux#v2.1.3'
-# set -g @catppuccin_flavor "frappe"
+set -g @plugin 'catppuccin/tmux'
 
-# set -g status-left-length 100
-# set -g status-right-length 100
-# set -g status-right-style "none"
-# set -g status-right "#{E:@catppuccin_status_application}"
-# set -ag status-right "#[bg=#{@thm_teal},fg=#{@thm_crust}]#[reverse]#[noreverse] 󱀙  "
-# set -ag status-right "#[fg=#{@thm_fg},bg=#{@thm_bg}] #(memory_pressure | awk '/percentage/{print $5}') "
-# set -ag status-right "#[bg=#{@thm_teal},fg=#{@thm_crust}]#[reverse]#[noreverse]   "
-# set -ag status-right "#[fg=#{@thm_fg},bg=#{@thm_bg}] #{cpu_percentage} "
-#
-# set -g @catppuccin_window_default_text " #W"
-# set -g @catppuccin_window_current_text " #W"
-# set -g @catppuccin_window_text " #W"
-#
-# set -g @catppuccin_window_status_style "basic"
+
+# set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @catppuccin_flavor "frappe"
+
+set -g status-left-length 100
+set -g status-right-length 100
+set -g status-right-style "none"
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#[bg=#{@thm_teal},fg=#{@thm_crust}]#[reverse]#[noreverse] 󱀙  "
+set -ag status-right "#[fg=#{@thm_fg},bg=#{@thm_bg}] #(memory_pressure | awk '/percentage/{print $5}') "
+set -ag status-right "#[bg=#{@thm_teal},fg=#{@thm_crust}]#[reverse]#[noreverse]   "
+set -ag status-right "#[fg=#{@thm_fg},bg=#{@thm_bg}] #{cpu_percentage} "
+
+set -g @catppuccin_window_default_text " #W"
+set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_window_text " #W"
+
+set -g @catppuccin_window_status_style "slanted"
+
+
+# set -g @catppuccin_flavor "macchiato"
+# set -g @catppuccin_window_status_style "slanted"
+# set -g @catppuccin_window_number_position "left"
+# set -g @catppuccin_window_default_fill "number"
+# set -g @catppuccin_window_default_text "#W"
+# set -g @catppuccin_window_current_fill "number"
+# set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_background "default"
+set -g @catppuccin_status_left_separator  " █"
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_left_separator_inverse "yes"
+set -g @catppuccin_status_right_separator_inverse "yes"
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "yes"
+
+set -g @catppuccin_pane_status_enabled "yes"
+
+# set -g @catppuccin_directory_text "#{pane_current_path}"
 # End catppuccin setup
+
+# Set Fish as the default shell for tmux
+# set-option -g default-shell /opt/homebrew/bin/fish
 
 # TMUX plugin manager (keep at the bottom of tmux.conf)
 run -b '~/.config/tmux/plugins/tpm/tpm'
+
+# set -g  status-left ""
+# set -g  status-right "#{E:@catppuccin_status_directory}"
+# set -ag status-right "#{E:@catppuccin_status_session}"
+# set -ag status-right "#{E:@catppuccin_status_date_time}"
 
 
 
